--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,16 @@
 *{
     font-family: "Poppins";
 }
+
+.row_posters {
+    display: flex;
+    background-color: aqua;
+}
+
+.row_poster {
+    width: 100%;
+    object-fit: contain;
+    max-height: 100px;
+    margin-right: 10px;
+    transition: transform 450ms;
+}
