--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -6,8 +6,9 @@
 }
 
 .banner_contents {
-    margin-left: 60px;
-    padding-top: 60px;
+    margin-left: 50px;
+    padding-top: 5px;
+    text-shadow: 3px 3px 15px black;
 }
 
 .banner_title {
@@ -18,7 +19,7 @@
 .banner_description {
     width: 45rem;
     line-height: 1.3;
-    font-size: 0.8rem;
+    font-size: 1rem;
     max-width: 360px;
     height: 80px;
     padding-bottom: 200px;
