--- a/src/components/ButtonSection/ButtonSection.css
+++ b/src/components/ButtonSection/ButtonSection.css
@@ -6,7 +6,7 @@
     display: flex;
     position: relative;
     height: 100px;
-    background-color: rgb(238, 238, 238);
+    background: linear-gradient(15deg, rgb(55, 55, 56), red);
 }
 
 .add_movie {
@@ -50,7 +50,7 @@
     font-weight: 300;
     border: none;
     outline: none;
-    color: #221F1F;
+    color: #ffffff;
     padding: 10px;
     padding-right: 60px;
     width: 0px;
@@ -65,6 +65,7 @@
 
 #search::-webkit-input-placeholder{
     font-size: 40px;
+    color: white;
 }
 
 #search:focus:hover {
