--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -56,3 +56,65 @@ header {
 .title:hover {
     transform: scale(1.1);
 }
+
+@media (max-width: 480px) {
+    .navbar {
+        text-align: left;
+    }
+
+    .navbar ul li {
+        display: inline-block;
+        padding: 0;
+    }
+
+    .nav-link {
+        float: none;
+        font-size: 20px;
+    }
+
+    .title {
+        font-size: 1.8rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        text-align: left;
+    }
+
+    .navbar ul li {
+        display: inline-block;
+        padding: 0 10px;
+    }
+
+    .nav-link {
+        float: none;
+        font-size: 22px;
+    }
+
+    .title {
+        font-size: 2rem;
+        padding-top: 25px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .navbar {
+        text-align: center;
+    }
+
+    .navbar ul li {
+        display: inline-block;
+        padding: 0 10px;
+    }
+
+    .nav-link {
+        float: none;
+        font-size: 24px;
+    }
+
+    .title {
+        font-size: 2.1rem;
+        padding-top: 10px;
+    }
+}
