--- a/src/components/AllMovieAddictMovies/AllMovieAddictMovies.css
+++ b/src/components/AllMovieAddictMovies/AllMovieAddictMovies.css
@@ -1,6 +1,13 @@
+#all_movies{
+background-color: #221F1F;
+margin: -22px 0 2px 0;
+padding-bottom: 10px;
+}
 #title{
     text-align: center;
-    font-size: 32px;
+    font-size: 34px;
+    color: white;
+    padding-top: 20px;
 }
 
 .movie-addict-movies{
