--- a/src/components/AllMovieAddictMovies/AllMovieAddictMovies.css
+++ b/src/components/AllMovieAddictMovies/AllMovieAddictMovies.css
@@ -1,16 +1,17 @@
-#all_movies{
-background-color: #221F1F;
-margin: -22px 0 2px 0;
-padding-bottom: 10px;
+#all_movies {
+    background-color: #221F1F;
+    margin: -22px 0 2px 0;
+    padding-bottom: 10px;
 }
-#title{
+
+#title {
     text-align: center;
     font-size: 34px;
     color: white;
     padding-top: 20px;
 }
 
-.movie-addict-movies{
+.movie-addict-movies {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -18,13 +19,13 @@ padding-bottom: 10px;
     margin-bottom: 10px;
 }
 
-.all-movies-image{
+.all-added-movies img {
     width: 286px;
     height: 380px;
     transition: 0.4s;
     padding-left: 8px;
 }
 
-.all-movies-image:hover{
+.all-movies-image:hover {
     transform: scale(1.07);
 }
