--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -36,3 +36,44 @@
     );
 }
 
+@media (max-width: 480px) {
+    .banner {
+        max-width: 100%;
+        height: 208px;
+    }
+
+    .banner_title {
+        font-size: 1rem;
+    }
+    .banner_contents {
+        margin-left: 20px;
+    }
+
+    .banner_description {
+        width: 20rem;
+        line-height: 1;
+        font-size: 0.7rem;
+        max-width: 200px;
+    }
+}
+
+@media (max-width: 960px) {
+    .banner {
+        max-width: 100%;
+        height: 208px;
+    }
+
+    .banner_title {
+        font-size:1.5rem;
+    }
+    .banner_contents {
+        margin-left: 20px;
+    }
+
+    .banner_description {
+        width: 20rem;
+        line-height: 1;
+        font-size: 0.9rem;
+        max-width: 420px;
+    }
+}
