--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -98,23 +98,45 @@ header {
     }
 }
 
-@media (max-width: 1024px) {
-    .navbar {
+@media (max-width: 320px) {
+    .nav-title{
+        font-size: 1.7rem;
+    }
+
+    .navbar ul li {
+        padding: 0;
+    }
+
+    .nav-link {
+        font-size: 16px;
+    }
+
+    .title {
+        padding: 10px;
+        text-align: center;
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .nav-title{
+        font-size: 1.9rem;
         text-align: center;
     }
 
     .navbar ul li {
-        display: inline-block;
-        padding: 0 10px;
+        padding: 0;
     }
 
     .nav-link {
-        float: none;
-        font-size: 24px;
+        font-size: 18px;
     }
 
     .title {
-        font-size: 2.1rem;
-        padding-top: 10px;
+        padding: 10px;
+        text-align: center;
+        font-size: 1.2rem;
     }
 }
+
+
