--- a/src/components/AllMovieAddictMovies/AllMovieAddictMovies.css
+++ b/src/components/AllMovieAddictMovies/AllMovieAddictMovies.css
@@ -1,6 +1,6 @@
 #all_movies {
     background-color: #221F1F;
-    margin: -22px 0 2px 0;
+    margin-top: -22px;
     padding-bottom: 10px;
 }
 
@@ -8,7 +8,39 @@
     text-align: center;
     font-size: 34px;
     color: white;
-    padding-top: 20px;
+}
+
+.search_div{
+    display: flex;
+    justify-content: center;
+}
+
+#search {
+    border: 3px solid #333;
+    border-right: none;
+    padding: 5px;
+    margin-bottom: 20px;
+    height: 34px;
+    border-radius: 5px 0 0 5px;
+    outline: none;
+    color: #333;
+}
+
+.searchButton {
+    width: 60px;
+    height: 50px;
+    border: 1px solid #333;
+    background: #333;
+    text-align: center;
+    color: #fff;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+}
+
+
+.searchButton .fa {
+    margin: -15px;
+    font-size: 14px;
 }
 
 .movie-addict-movies {
@@ -29,6 +61,8 @@
 .all-movies-image:hover {
     transform: scale(1.07);
 }
+
+
 
 @media (max-width: 480px) {
     .all-added-movies img {
