--- a/src/components/ButtonSection/ButtonSection.css
+++ b/src/components/ButtonSection/ButtonSection.css
@@ -1,90 +1,22 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
-@import url(https://raw.github.com/FortAwesome/Font-Awesome/master/docs/assets/css/font-awesome.min.css);
-
-
 #wrap {
+    width: 100%;
     display: flex;
-    position: relative;
-    height: 100px;
-    background: linear-gradient(15deg, rgb(55, 55, 56), red);
+    flex-wrap: wrap;
+    text-align: center;
+    height: 70px;
 }
 
-.add_movie {
+#wrap div {
+    margin: auto;
     text-decoration: none;
-    font-size: 25px;
-    background-color: #221F1F;
-    color: white;
-    padding: 10px 20px;
-    margin: 20px 20px;
-    margin-right: 420px;
-    border-radius: 5px;
-    float: left;
-    transition: 0.4s ease;
 }
 
-.search_movie {
+.wrap_btn {
+    background-color: red;
+    padding: 10px 20px;
     text-decoration: none;
-    font-size: 25px;
-    background-color: #221F1F;
     color: white;
-    padding: 10px 20px;
-    margin: 20px 20px;
-    margin-right: 420px;
     border-radius: 5px;
-    float: left;
-    transition: 0.4s ease;
-}
-
-.add_movie:hover{
-    transform: scale(1.04);
-}
-
-.search_movie:hover{
-    transform: scale(1.04);
 }
 
 
-
-
-#search_submit:hover {
-    opacity: 0.8;
-}
-
-@media (max-width: 480px) {
-    #wrap {
-        display: inline-block;
-        height: 45px;
-        background: linear-gradient(15deg, rgb(55, 55, 56), red);
-    }
-
-    .add_movie {
-        font-size: 10px;
-        margin: 5px 10px;
-    }
-    .search_movie {
-        text-decoration: none;
-        font-size: 10px;
-        border-radius: 5px;
-        margin: 5px 5px;
-    }
-
-    #search {
-        height: 20px;
-        font-size: 55px;
-        font-family: "Lato";
-        font-weight: 300;
-        border: none;
-        outline: none;
-        color: #ffffff;
-        padding: 10px;
-        padding-right: 60px;
-        width: 0px;
-        position: absolute;
-        top: 0;
-        right: 0;
-        background: none;
-        z-index: 3;
-        transition: width .4s cubic-bezier(0.000, 0.795, 0.000, 1.000);
-        cursor: pointer;
-    }
-}
