add responsive design

--- a/src/components/AddMovie/AddMovie.css
+++ b/src/components/AddMovie/AddMovie.css
@@ -19,44 +19,44 @@
     margin-bottom: -5px;
 }
 
-.form_title {
+.add_form_title {
     text-align: center;
     font-size: 45px;
     margin-top: 3px;
     margin-bottom: -95px;
 }
 
-.left_movie_section {
+.add_left_movie_section {
     float: left;
     padding-right: 50px;
 }
 
-.right_movie_section {
+.add_right_movie_section {
     float: right;
 }
 
-.form-control {
+.add_form-control {
     width: 26vw;
     height: 40px;
     border-radius: 8px;
 }
 
-.form-control_special {
+.add_form-control_special {
     height: 137px;
     width: 26vw;
     border-radius: 8px;
 }
 
-.form-control::-webkit-input-placeholder {
+.add_form-control::-webkit-input-placeholder {
     font-size: 16px;
 }
 
-.form-control_special::-webkit-input-placeholder {
+.add_form-control_special::-webkit-input-placeholder {
     font-size: 16px;
     text-align: center;
 }
 
-.btn_submit {
+.add_btn_submit {
     font-size: 22px;
     color: white;
     background-color: #e50914;
@@ -68,6 +68,209 @@
     transition: 0.4s;
 }
 
-.btn_submit:hover {
+.add_btn_submit:hover {
     font-size: 26px;
+}
+
+@media(min-width: 320px) {
+    .add_movie_form {
+        margin: 15px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        text-align: center;
+        align-content: center;
+    }
+
+    .add_form_title {
+        font-size: 35px;
+        margin-top: 3px;
+        margin-bottom: -85px;
+    }
+
+    .add_movie_form h1 {
+        font-size: 18px;
+        margin-bottom: -5px;
+    }
+
+    .add_left_movie_section {
+        margin-left: 50px;
+    }
+
+    .add_form-control {
+        width: 200px;
+        height: 35px;
+        margin: auto;
+    }
+
+    .add_form-control_special {
+        height: 107px;
+        width: 200px;
+    }
+
+    .add_btn_submit {
+        font-size: 20px;
+        height: 50px;
+        width: 208px;
+        margin-top: 20px;
+        margin-left: 52px;
+    }
+
+    .add_btn_submit:hover {
+        font-size: 22px;
+    }
+}
+
+@media(min-width: 480px) {
+    .add_movie_form {
+        margin: 25px;
+    }
+
+    .add_form_title {
+        font-size: 38px;
+        margin-top: 3px;
+        margin-bottom: -85px;
+    }
+
+    .add_movie_form h1 {
+        font-size: 20px;
+        margin-bottom: -5px;
+    }
+
+    .add_form-control {
+        width: 300px;
+        height: 38px;
+    }
+
+    .add_form-control_special {
+        height: 127px;
+        width: 300px;
+    }
+
+    .add_btn_submit {
+        font-size: 22px;
+        height: 50px;
+        width: 308px;
+        margin-top: 20px;
+        margin-left: 52px;
+    }
+
+    .add_btn_submit:hover {
+        font-size: 24px;
+    }
+}
+
+@media(min-width: 725px) {
+    .add_movie_form {
+        margin: 35px;
+    }
+
+    .add_form_title {
+        font-size: 35px;
+        text-align: center;
+    }
+
+    .add_movie_form h1 {
+        font-size: 20px;
+        margin-bottom: 1px;
+    }
+
+    .add_form-control {
+        width: 350px;
+        height: 38px;
+    }
+
+    .add_form-control_special {
+        height: 147px;
+        width: 350px;
+    }
+
+    .add_btn_submit {
+        font-size: 22px;
+        height: 70px;
+        width: 358px;
+        margin-top: 20px;
+        margin-left: 52px;
+    }
+
+    .add_btn_submit:hover {
+        font-size: 24px;
+    }
+}
+
+@media(min-width: 990px) {
+    .add_movie_form {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        text-align: left;
+        margin: 10px 15px ;
+    }
+
+    .add_form_title {
+        font-size: 40px;
+        text-align: center;
+    }
+
+    .add_left_movie_section{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: center;
+        margin: auto;
+    }
+
+    .add_right_movie_section{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: center;
+        margin: auto;
+    }
+    .add_form-control {
+        width: 320px;
+        height: 38px;
+    }
+
+    .add_form-control_special {
+        height: 127px;
+        width: 320px;
+    }
+
+    .add_btn_submit {
+        justify-content: right;
+        font-size: 22px;
+        height: 60px;
+        width: 328px;
+        margin: 32px auto;
+    }
+
+    .add_btn_submit:hover {
+        font-size: 24px;
+    }
+}
+
+@media(min-width: 1250px) {
+
+    .add_form-control {
+        width: 450px;
+        height: 38px;
+    }
+
+    .add_form-control_special {
+        height: 127px;
+        width: 450px;
+    }
+
+    .add_btn_submit {
+        justify-content: right;
+        font-size: 22px;
+        height: 60px;
+        width: 328px;
+        margin: 32px auto;
+    }
+
+    .add_btn_submit:hover {
+        font-size: 24px;
+    }
 }
