--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -40,3 +40,61 @@
     height: 2px;
     background-color: red;
 }
+
+@media (min-width: 320px) {
+    .created_by_user {
+        display: inline-block;
+    }
+
+    .favourite_movies {
+        display:inline-block;
+    }
+
+    .profile_wrapper h1{
+        font-size: 20px;
+    }
+
+    .all-movies-image {
+        width: 130px;
+        height: 175px;
+    }
+}
+
+@media (min-width: 480px) {
+
+    .all-movies-image {
+        width: 130px;
+        height: 175px;
+    }
+
+    .profile_wrapper h1{
+        font-size: 22px;
+    }
+
+    .all-movies-image {
+        width: 150px;
+        height: 195px;
+    }
+}
+
+@media (min-width: 760px) {
+    .profile_wrapper h1{
+        font-size: 20px;
+    }
+
+    .all-movies-image {
+        width: 170px;
+        height: 215px;
+    }
+}
+
+@media (min-width: 960px) {
+    .profile_wrapper h1{
+        font-size: 24px;
+    }
+
+    .all-movies-image {
+        width: 170px;
+        height: 215px;
+    }
+}
