--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,27 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.notification{
+.notification {
   margin-top: 70px;
 }
 
+@media(min-width: 320px) {
+  .notification {
+    margin-top: 135px;
+    font-size: 11px;
+  }
+}
+
+@media(min-width: 480px) {
+  .notification {
+    margin-top: 105px;
+    font-size: 14px;
+  }
+}
+
+@media(min-width: 760px) {
+  .notification {
+    margin-top: 55px;
+    font-size: 14px;
+  }
+}
