--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -25,18 +25,16 @@
     padding-bottom: 200px;
 }
 
-.fade_banner{
+.fade_banner {
     height: 7.4rem;
     margin-top: -115px;
-    background-image: linear-gradient(
-        180deg,
-        transparent,
-        rgba(37,37,37,0.61),
-        #111
-    );
+    background-image: linear-gradient(180deg,
+            transparent,
+            rgba(37, 37, 37, 0.61),
+            #111);
 }
 
-@media (max-width: 480px) {
+@media (min-width: 320px) {
     .banner {
         max-width: 100%;
         height: 208px;
@@ -45,6 +43,7 @@
     .banner_title {
         font-size: 1rem;
     }
+
     .banner_contents {
         margin-left: 20px;
     }
@@ -52,20 +51,22 @@
     .banner_description {
         width: 20rem;
         line-height: 1;
-        font-size: 0.7rem;
+        font-size: 0.6rem;
         max-width: 200px;
     }
 }
 
-@media (max-width: 960px) {
+
+@media (min-width: 480px) {
     .banner {
         max-width: 100%;
         height: 208px;
     }
 
     .banner_title {
-        font-size:1.5rem;
+        font-size: 1.2rem;
     }
+
     .banner_contents {
         margin-left: 20px;
     }
@@ -73,7 +74,54 @@
     .banner_description {
         width: 20rem;
         line-height: 1;
-        font-size: 0.9rem;
+        font-size: 0.75rem;
         max-width: 420px;
+    }
+}
+
+
+@media (min-width: 760px) {
+    .banner {
+        max-width: 100%;
+        height: 298px;
+    }
+
+    .banner_title {
+        font-size: 1.8rem;
+    }
+
+    .banner_contents {
+        margin-left: 20px;
+    }
+
+    .banner_description {
+        line-height: 1;
+        font-size: 1rem;
+        margin-top: -20px;
+    }
+}
+
+@media (min-width: 960px) {
+    .banner {
+        max-width: 100%;
+        height: 448px;
+    }
+
+    .banner_title {
+        font-size: 2rem;
+        padding-top: 40px;
+
+    }
+
+    .banner_contents {
+        margin-left: 20px;
+        padding-top: 40px;
+
+    }
+
+    .banner_description {
+        width: 100%;
+        font-size: 1.1rem;
+        margin-top: -20px;
     }
 }
