--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -53,15 +53,58 @@
     padding-top: 20px;
 }
 
-@media (max-width: 480px) {
+@media (min-width: 320px) {
     .fa {
         padding: 15px;
-        margin: 0 10px;
-        font-size: 30px;
-        width: 30px;
+        font-size: 15px;
+        width: 15px;
+    }
+
+    .copy {
+        padding: 0 10px;
+        font-size: 15px;
+        margin-bottom: 10px;
     }
 
     .site-footer {
-        padding-bottom: 30px;
+        height: 140px;
+        bottom: 0px;
+        left: 0px;
+        right: 0px;
+        margin-bottom: 0px;
+    }
+
+}
+
+@media (min-width: 480px) {
+    .fa {
+        font-size: 18px;
+        width: 18px;
+    }
+
+    .copy {
+        font-size: 18px;
+    }
+}
+
+@media (min-width: 760px) {
+    .fa {
+        font-size: 21px;
+        width: 21px;
+    }
+
+    .copy {
+        font-size: 22px;
+    }
+}
+
+@media (min-width: 980px) {
+    .fa {
+        font-size: 24px;
+        width: 24px;
+    }
+
+    .copy {
+        font-size: 24px;
     }
 }
