--- a/src/components/CategorySection/CategorySection.css
+++ b/src/components/CategorySection/CategorySection.css
@@ -29,12 +29,12 @@
 }
 
 #buttons{
-    margin-left: 34%;
+    margin: auto;
 }
 
 @media (min-width: 320px) {
     .category_container{
-        padding: 1px;
+        padding: 4px;
     }
     .category_notification {
         font-size: 16px;
@@ -53,7 +53,8 @@
     }
 
     #buttons{
-        margin: 10px auto;
+        text-align: center;
+        margin: 20px auto;
     }
 }
 
