--- a/src/components/NetflixMovieDetails/NetflixDetails.css
+++ b/src/components/NetflixMovieDetails/NetflixDetails.css
@@ -3,7 +3,7 @@
     padding-top: 50px;
     height: 82vh;
     display: flex;
-    background-color: #E50914;
+    background: linear-gradient(#575757, #ff0000);
 }
 
 .details_image {
@@ -31,18 +31,18 @@
     background-color: white;
 }
 
-#video_section {
-    background-color: #221F1F;
+.video_section {
+    background-color: .221F1F;
     margin-bottom: -50px;
     padding: 20px 0;
 }
 
-#video_section>h1 {
+.video_section>h1 {
     color: white;
     text-align: center;
 }
 
-#video {
+.video {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
@@ -63,6 +63,10 @@
         width: 210px;
     }
 
+    .movie_information h1 {
+        font-size: 20px;
+    }
+
     .movie_information h2 {
         font-size: 18px;
     }
@@ -72,7 +76,7 @@
         text-align: left;
     }
 
-    #video {
+    .video {
         width: 300px;
         height: 220px;
     }
@@ -100,7 +104,7 @@
         text-align: left;
     }
 
-    #video {
+    .video {
         width: 400px;
         height: 320px;
     }
@@ -118,12 +122,20 @@
         width: 300px;
     }
 
+    .movie_information h1{
+        font-size: 22px;        
+    }
+
+    .movie_information h2{
+        font-size: 20px;
+    }
+
     .movie_information {
         padding: 0 20px;
         text-align: left;
     }
 
-    #video {
+    .video {
         width: 480px;
         height: 370px;
     }
@@ -150,8 +162,12 @@
         color: white;
     }
 
+    .movie_information h1{
+        font-size: 24px;
+    }
+
     .movie_information h2 {
-        font-size: 25px;
+        font-size: 18px;
     }
 
     .movie_information span {
@@ -163,18 +179,18 @@
         background-color: white;
     }
 
-    #video_section {
+    .video_section {
         background-color: #221F1F;
         margin-bottom: -50px;
         padding: 20px 0;
     }
 
-    #video_section>h1 {
+    .video_section>h1 {
         color: white;
         text-align: center;
     }
 
-    #video {
+    .video {
         width: 800px;
         height: 450px;
         position: relative;
