--- a/src/components/NetflixMovieDetails/NetflixDetails.css
+++ b/src/components/NetflixMovieDetails/NetflixDetails.css
@@ -32,7 +32,7 @@
 }
 
 .video_section {
-    background-color: .221F1F;
+    background-color: #221F1F;
     margin-bottom: -50px;
     padding: 20px 0;
 }
