--- a/src/components/MovieAddictDetails/MovieDetails.css
+++ b/src/components/MovieAddictDetails/MovieDetails.css
@@ -59,6 +59,11 @@
     background-color: white;
 }
 
+.video_section {
+    background-color: #333;
+    color: white;
+}
+
 @media (min-width: 320px) {
     .details_container_ma {
         padding-top: 20px;
@@ -66,6 +71,11 @@
         font-size: 10px;
         height: 100%;
         width: 100%;
+    }
+
+    .video_section {
+        background-color: #333;
+        color: white;
     }
 
     .creator_buttons {
@@ -108,6 +118,11 @@
     .personal_btn_guest {
         font-size: 18px;
         padding: 5px 20px;
+    }
+
+    .video_section {
+        background-color: #333;
+        color: white;
     }
 }
 
