--- a/src/components/Home/Banner.css
+++ b/src/components/Home/Banner.css
@@ -37,14 +37,15 @@
 @media (min-width: 320px) {
     .banner {
         max-width: 100%;
-        height: 208px;
+        height: 345px;
     }
 
     .banner_title {
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
 
     .banner_contents {
+        margin-top: 120px;
         margin-left: 20px;
     }
 
@@ -56,15 +57,10 @@
     }
 }
 
-
 @media (min-width: 480px) {
-    .banner {
-        max-width: 100%;
-        height: 208px;
-    }
 
     .banner_title {
-        font-size: 1.2rem;
+        font-size: 1.3rem;
     }
 
     .banner_contents {
@@ -92,6 +88,7 @@
 
     .banner_contents {
         margin-left: 20px;
+        margin-top: 0px;
     }
 
     .banner_description {
@@ -110,12 +107,11 @@
     .banner_title {
         font-size: 2rem;
         padding-top: 40px;
-
     }
 
     .banner_contents {
         margin-left: 20px;
-        padding-top: 40px;
+        padding-top: 60px;
 
     }
 
