--- a/src/components/MovieAddictDetails/MovieDetails.css
+++ b/src/components/MovieAddictDetails/MovieDetails.css
@@ -66,6 +66,7 @@
 
 @media (min-width: 320px) {
     .details_container_ma {
+        margin-top: -10px;
         padding-top: 20px;
         display: inline-block;
         font-size: 10px;
@@ -91,8 +92,14 @@
     }
 
     .personal_btn_guest {
-        font-size: 14px;
-        padding: 5px 20px;
+        font-size: 13px;
+        padding: 5px 10px;
+    }
+}
+
+@media (min-width: 480px) {
+    .details_container_ma{
+        margin-top: -20px;
     }
 }
 
@@ -101,6 +108,7 @@
         padding-top: 20px;
         display: inline-block;
         font-size: 10px;
+        margin-top: -26px;
     }
 
     .creator_buttons {
