--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -74,47 +74,48 @@ header {
         font-size: 1.5rem;
         text-align: center;
         padding-top: 1rem;
-        padding-left: 25%;
         margin-bottom: -15px;
     }
 }
 
-@media (min-width: 480px) {
+@media (min-width: 500px) {
     .header {
-        height: 120px;
+        height: 115px;
     }
 
     .navbar {
-        text-align: center;
+        float: left;
+    }
+
+    .nav-menu {
+        padding-top: 1rem;
     }
 
     .nav-link {
         font-size: 20px;
-        margin-top: -15px;
+        margin-top: -45px;
     }
 
     .title {
         font-size: 1.7rem;
-        text-align: center;
+        text-align: left;
         padding-top: 1rem;
-        padding-left: 35%;
     }
 }
 
-@media (min-width: 728px) {
+@media (min-width: 675px) {
     .header {
         height: 70px;
     }
- 
 
     .navbar {
         float: right;
+        padding: 0.8rem 1rem;
     }
 
     .nav-link {
-        margin-top: 0px;
-
-        font-size: 18px;
+        margin-top: -45px;
+        font-size: 20px;
     }
 
     .title {
@@ -127,7 +128,7 @@ header {
 @media (min-width: 968px) {
 
     .nav-link {
-        font-size: 20px;
+        font-size: 22px;
     }
 
     .title {
