--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,24 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.notification-warn {
+  width: 500px;
+  padding: 10px;
+  margin-top: 60px;
+  margin-left: -180px;
+  font-size: 14px;
+}
+
 @media(min-width: 320px) {
   .notification {
     margin-top: 110px;
     font-size: 11px;
+  }
+
+  .notification-warn {
+    font-size: 11px;
+    margin: 110px 0 0 0;
+    width: 100%;
   }
 }
 
@@ -16,11 +30,23 @@ body {
     margin-top: 55px;
     font-size: 14px;
   }
+
+  .notification-warn {
+    font-size: 11px;
+    margin: 100px 0 0 -145px;
+    width: 150%;
+  }
 }
 
 @media(min-width: 760px) {
   .notification {
     margin-top: 55px;
     font-size: 14px;
+  }
+
+  .notification-warn {
+    font-size: 11px;
+    margin: 60px 0 0 -145px;
+    width: 150%;
   }
 }
